# vkrunner

./: meson.build
scripts/: convert_shader_runner.py
src/: CMakeLists.txt  gui-initial-script.c  gui-worker.c  gui.c  meson.build
vkrunner/: requirements.rs
